List refactoring: remove the scrolling container, fix #270 Remove all scrollableNode and d-list-container references List.css cleanup (overflow-x, ...) Fix selected item persistance when focusing/unfocusing

--- a/list/List/themes/bootstrap/List.css
+++ b/list/List/themes/bootstrap/List.css
@@ -25,7 +25,6 @@
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
 .d-list-category .d-list-cell {
   background-color: #f5f5f5;
@@ -86,20 +85,17 @@
   margin-right: 7px;
 }
 .d-list-item-label {
-  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 .d-list-item-right-text {
   padding-right: 4px;
-  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 .d-list-loader .d-list-cell {
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: hidden;
   cursor: pointer;
   font-weight: 500;
   height: 38px;
@@ -182,10 +178,6 @@
   color: #ffffff;
   font-weight: bold;
 }
-.d-list-container {
-  position: relative;
-  height: 100%;
-}
 /*******************************/
 /* iOS theme for RoundRectList */
 /*                             */
@@ -197,22 +189,23 @@
 .d-round-rect-list {
   /* edit display at your own risk */
   display: block;
-  /* position needed for moving list items in editable mode: do not edit */
+  /* Position relative is needed by List.getBottomDistance(). */
+  /* The List must be positioned to be the offsetNode of renderers. */
+  /* Otherwise, the offsetTop value is computed against a wrong parent */
   position: relative;
   /* Do not change this margin setting when customizing list in the app css */
   margin: 0 9px;
   padding: 0;
-  overflow-x: hidden;
 }
-.d-round-rect-list > .d-list-container > *:first-child {
+.d-round-rect-list > *:first-child {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
-.d-round-rect-list > .d-list-container > *:last-child {
+.d-round-rect-list > *:last-child {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-.d-round-rect-list > .d-list-container > *:last-child .d-list-cell {
+.d-round-rect-list > *:last-child .d-list-cell {
   border-bottom-width: 0;
   /* padding-bottom to compensate the fact that the bottom width is 0 instead of 1 */
   padding-bottom: 1px;
@@ -220,14 +213,15 @@
 .d-list {
   /* edit display at your own risk */
   display: block;
-  /* position needed for moving list items in editable mode: do not edit */
+  /* Position relative is needed by List.getBottomDistance(). */
+  /* The List must be positioned to be the offsetNode of renderers. */
+  /* Otherwise, the offsetTop value is computed against a wrong parent */
   position: relative;
   padding: 0;
   /* Do not change this margin setting when customizing list in the app css*/
   margin: 0;
-  overflow-x: hidden;
 }
-.d-list > .d-list-container > *:last-child .d-list-cell {
+.d-list > *:last-child .d-list-cell {
   border-bottom-width: 0;
   /* padding-bottom to compensate the fact that the bottom width is 0 instead of 1 */
   padding-bottom: 1px;
